src/main/kotlin/com/example/iceeteaserver/global/error/ErrorResponse.kt
package com.example.iceeteaserver.global.error

data class ErrorResponse(
    val message: String,
    val status: Int
)